added navbar text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>Document</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="logo"></div>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>About Us</li>
+          <li>Why Us</li>
+          <li>Contact Us</li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <section class="hero">
         <article>
