--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
       <nav>
         <ul>
           <li>Home</li>
-          <li>About Us</li>
-          <li>Why Us</li>
-          <li>Contact Us</li>
+          <li><a href="#about-us">About Us</a></li>
+          <li><a href="#features">Why Us</a></li>
+          <li>Benefits Of Outsourcing</li>
+          <li><a href="#contact-us">Contact Us</a></li>
         </ul>
       </nav>
     </header>
@@ -31,6 +32,22 @@
           We bring end-to-end accounting solutions that keep books up-to-date
           and compliant, enable quick decision making, seize opportunities and
           fasten growth.
+        </p>
+      </section>
+
+      <section id="about-us" class="about-us">
+        <h2>About Ewaan Financial</h2>
+
+        <p>
+          As a relatively new entrant, Ewaan Financial has the advantage of
+          always having used the latest accounting systems and practices that
+          are a much needed tool in today’s accounting environment. Our 8 years
+          of experience in servicing organisations with accounting and taxation
+          services has taught us the importance of building close relationships
+          with our clients to ensure the most efficient service. It’s this
+          relationship that helps us understand our client’s unique
+          circumstances and tailor our services to meet their needs. And most
+          importantly, at an affordable cost.
         </p>
       </section>
       <section class="highlights">
@@ -86,7 +103,7 @@
         </article>
       </section>
 
-      <section class="features grid">
+      <section id="features" class="features grid">
         <h2>Our Key Differentiators</h2>
 
         <article class="features__single">
@@ -191,7 +208,7 @@
         </article>
       </section>
 
-      <section class="contact-us"></section>
+      <section id="contact-us" class="contact-us"></section>
       <h2>Contact Us</h2>
 
       <p>We Support Multiple Accounting Software</p>
