--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/src/css/main.css" />
-    <title>Document</title>
+    <script src="./dist/main.js"></script>
+    <title>Ewaan Financial</title>
   </head>
   <body>
     <header>
