--- a/src/template.html
+++ b/src/template.html
@@ -10,14 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/css/main.css" />
-    <script src="./dist/main.js"></script>
+    <!-- <link rel="stylesheet" href="/src/css/main.css" />
+    <script src="./dist/main.js"></script> -->
     <title>Ewaan Financial</title>
   </head>
   <body>
     <header>
       <div class="logo">
-        <img src="./src//images/logo.png" alt="" />
+        <img src="./images/logo.png" alt="" />
       </div>
       <nav>
         <ul>
