added menu icon and navbar for mobile

--- a/src/template.html
+++ b/src/template.html
@@ -19,18 +19,22 @@
       <div class="logo">
         <img src="./images/logo.png" alt="" />
       </div>
-      <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="#about-us">About Us</a></li>
-          <li><a href="#features">Why Us</a></li>
-          <li><a href="#benefits">Benefits Of Outsourcing</a></li>
-          <li><a href="#contact-us">Contact Us</a></li>
-        </ul>
+      <nav class="nav">
+        <div class="nav__wrapper">
+          <ul class="nav__list">
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#about-us">About Us</a></li>
+            <li><a href="#features">Why Us</a></li>
+            <li><a href="#benefits">Benefits Of Outsourcing</a></li>
+            <li><a href="#contact-us">Contact Us</a></li>
+          </ul>
+        </div>
+        <div id="menu" class="menu"><span></span></div>
       </nav>
     </header>
+
     <main>
-      <section class="hero">
+      <section id="hero" class="hero">
         <article>
           <figure class="hero__image"></figure>
 
@@ -243,8 +247,8 @@
       </p>
       <h6>Every Business is Unique. Find Out How We Can Help Yours.</h6>
       <form>Send us a message</form>
-    </main>
 
-    <footer></footer>
+      <footer></footer>
+    </main>
   </body>
 </html>
