--- a/src/template.html
+++ b/src/template.html
@@ -20,7 +20,7 @@
         <img src="./images/logo.png" alt="" />
       </div>
       <nav class="nav">
-        <div class="nav__wrapper">
+        <div class="nav__wrapper hidden">
           <ul class="nav__list">
             <li><a href="#hero">Home</a></li>
             <li><a href="#about-us">About Us</a></li>
@@ -36,7 +36,27 @@
     <main>
       <section id="hero" class="hero">
         <article>
-          <figure class="hero__image"></figure>
+          <figure class="hero__image">
+            <picture>
+              <source
+                media="(min-width: 1400px)"
+                srcset="./images/laptop-with-dashboard-1400.jpg"
+              />
+              <source
+                media="(min-width: 1200px)"
+                srcset="./images/laptop-with-dashboard-1200.jpg"
+              />
+              <source
+                media="(min-width: 800px)"
+                srcset="./images/laptop-with-dashboard-800.jpg"
+              />
+              <source
+                media="(min-width: 600px)"
+                srcset="./images/laptop-with-dashboard.jpg"
+              />
+              <img src="./images/laptop-with-dashboard.jpg" alt="" />
+            </picture>
+          </figure>
 
           <div class="hero__content"></div>
         </article>
