--- a/src/template.html
+++ b/src/template.html
@@ -98,21 +98,38 @@
 
       <section class="services">
         <article class="slider">
-          <figure>
-            <picture
-              ><img src="./images/accounting.jpg" loading="lazy" alt=""
-            /></picture>
-          </figure>
-          <figure>
-            <picture
-              ><img src="./images/bookkeeping.jpg" loading="lazy" alt=""
-            /></picture>
-          </figure>
-          <figure>
-            <picture
-              ><img src="./images/gst.jpg" loading="lazy" alt=""
-            /></picture>
-          </figure>
+          <div class="slides">
+            <figure class="slide">
+              <picture
+                ><img src="./images/accounting.jpg" loading="lazy" alt=""
+              /></picture>
+            </figure>
+            <figure class="slide">
+              <picture
+                ><img src="./images/bookkeeping.jpg" loading="lazy" alt=""
+              /></picture>
+            </figure>
+            <figure class="slide">
+              <picture
+                ><img src="./images/bookkeeping.jpg" loading="lazy" alt=""
+              /></picture>
+            </figure>
+            <figure class="slide">
+              <picture
+                ><img src="./images/bookkeeping.jpg" loading="lazy" alt=""
+              /></picture>
+            </figure>
+            <figure class="slide">
+              <picture
+                ><img src="./images/bookkeeping.jpg" loading="lazy" alt=""
+              /></picture>
+            </figure>
+            <figure class="slide">
+              <picture
+                ><img src="./images/gst.jpg" loading="lazy" alt=""
+              /></picture>
+            </figure>
+          </div>
           <div class="arrow left">
             <span class="icon"> <i class="fa-solid fa-arrow-left"></i></span>
           </div>
