--- a/src/template.html
+++ b/src/template.html
@@ -109,21 +109,7 @@
                 ><img src="./images/bookkeeping.jpg" loading="lazy" alt=""
               /></picture>
             </figure>
-            <figure class="slide">
-              <picture
-                ><img src="./images/bookkeeping.jpg" loading="lazy" alt=""
-              /></picture>
-            </figure>
-            <figure class="slide">
-              <picture
-                ><img src="./images/bookkeeping.jpg" loading="lazy" alt=""
-              /></picture>
-            </figure>
-            <figure class="slide">
-              <picture
-                ><img src="./images/bookkeeping.jpg" loading="lazy" alt=""
-              /></picture>
-            </figure>
+
             <figure class="slide">
               <picture
                 ><img src="./images/gst.jpg" loading="lazy" alt=""
@@ -153,7 +139,7 @@
           <div class="service">
             <h5>Bookkeeping Services</h5>
             <span class="icon">
-              <i class="fa-solid fa-file-invoice-dollar"></i>
+              <img src="./images/bookkeeping.png" alt="" />
             </span>
             <p>
               Ewaan Financia has an impressive record of providing bookkeeping
@@ -164,7 +150,7 @@
           <div class="service">
             <h5>Accounts Payable</h5>
             <span class="icon">
-              <i class="fa-solid fa-file-invoice-dollar"></i>
+              <img src="./images/accounting.png" alt="" />
             </span>
             <p>
               From invoice receipt, uploading and processing to difference
@@ -175,7 +161,7 @@
           <div class="service">
             <h5>Accounts Receivable</h5>
             <span class="icon">
-              <i class="fa-solid fa-file-invoice-dollar"></i>
+              <img src="./images/accounting.png" alt="" />
             </span>
             <p>
               Our customized accounts receivable services can help boost your
@@ -185,7 +171,7 @@
           <div class="service">
             <h5>Financial Reporting</h5>
             <span class="icon">
-              <i class="fa-solid fa-file-invoice-dollar"></i>
+              <img src="./images/report.png" alt="" />
             </span>
             <p>
               Our financial reporting services are designed to suit your
@@ -196,7 +182,7 @@
           <div class="service">
             <h5>Payroll Processing</h5>
             <span class="icon">
-              <i class="fa-solid fa-file-invoice-dollar"></i>
+              <img src="./images/payroll.png" alt="" />
             </span>
             <p>
               We at Ewaan Financial offer effortless, friendly and
@@ -206,7 +192,7 @@
           <div class="service">
             <h5>Tax Preparation</h5>
             <span class="icon">
-              <i class="fa-solid fa-file-invoice-dollar"></i>
+              <img src="./images/tax.png" alt="" />
             </span>
             <p>
               With Ewaan Financial’s tax preparation services, your small
