--- a/src/template.html
+++ b/src/template.html
@@ -116,11 +116,11 @@
               /></picture>
             </figure>
           </div>
-          <div class="arrow left">
-            <span class="icon"> <i class="fa-solid fa-arrow-left"></i></span>
+          <div class="arrow left icon">
+            <i class="fa-solid fa-chevron-left"></i>
           </div>
-          <div class="arrow right">
-            <span class="icon"> <i class="fa-solid fa-arrow-right"></i></span>
+          <div class="arrow right icon">
+            <i class="fa-solid fa-chevron-right"></i>
           </div>
         </article>
 
