--- a/src/template.html
+++ b/src/template.html
@@ -62,6 +62,22 @@
             </picture>
           </figure>
 
+          <!-- <figure class="hero__image">
+            <picture>
+              <source
+                media="(min-width: 1400px)"
+                srcset="./images/header.jpg"
+              />
+              <source
+                media="(min-width: 1200px)"
+                srcset="./images/header.jpg"
+              />
+              <source media="(min-width: 800px)" srcset="./images/header.jpg" />
+              <source media="(min-width: 600px)" srcset="./images/header.jpg" />
+              <img src="./images/header.jpg" alt="" />
+            </picture>
+          </figure> -->
+
           <div class="hero__content"></div>
         </article>
 
@@ -148,7 +164,7 @@
           </div>
 
           <div class="service">
-            <h5>Accounts Payable</h5>
+            <h5>Accounting</h5>
             <span class="icon">
               <img src="./images/accounting.png" alt="" />
             </span>
@@ -159,7 +175,7 @@
             </p>
           </div>
           <div class="service">
-            <h5>Accounts Receivable</h5>
+            <h5>GST</h5>
             <span class="icon">
               <img src="./images/accounting.png" alt="" />
             </span>
