--- a/src/template.html
+++ b/src/template.html
@@ -44,39 +44,23 @@
             <picture>
               <source
                 media="(min-width: 1400px)"
-                srcset="./images/laptop-with-dashboard-1400.jpg"
+                srcset="./images/site/laptop-with-dashboard-1400.jpg"
               />
               <source
                 media="(min-width: 1200px)"
-                srcset="./images/laptop-with-dashboard-1200.jpg"
+                srcset="./images/site/laptop-with-dashboard-1200.jpg"
               />
               <source
                 media="(min-width: 800px)"
-                srcset="./images/laptop-with-dashboard-800.jpg"
+                srcset="./images/site/laptop-with-dashboard-800.jpg"
               />
               <source
                 media="(min-width: 600px)"
-                srcset="./images/laptop-with-dashboard.jpg"
+                srcset="./images/site/laptop-with-dashboard.jpg"
               />
-              <img src="./images/laptop-with-dashboard.jpg" alt="" />
+              <img src="./images/site/laptop-with-dashboard.jpg" alt="" />
             </picture>
           </figure>
-
-          <!-- <figure class="hero__image">
-            <picture>
-              <source
-                media="(min-width: 1400px)"
-                srcset="./images/header.jpg"
-              />
-              <source
-                media="(min-width: 1200px)"
-                srcset="./images/header.jpg"
-              />
-              <source media="(min-width: 800px)" srcset="./images/header.jpg" />
-              <source media="(min-width: 600px)" srcset="./images/header.jpg" />
-              <img src="./images/header.jpg" alt="" />
-            </picture>
-          </figure> -->
 
           <div class="hero__content"></div>
         </article>
@@ -117,26 +101,35 @@
           <div class="slides">
             <figure class="slide">
               <picture
-                ><img src="./images/accounting.jpg" loading="lazy" alt=""
+                ><img
+                  src="./images/slider/accounting.jpg"
+                  loading="lazy"
+                  alt=""
               /></picture>
             </figure>
             <figure class="slide">
               <picture
-                ><img src="./images/bookkeeping.jpg" loading="lazy" alt=""
+                ><img src="./images/slider/gst.jpg" loading="lazy" alt=""
               /></picture>
             </figure>
 
             <figure class="slide">
               <picture
-                ><img src="./images/gst.jpg" loading="lazy" alt=""
+                ><img src="./images/slider/payroll" loading="lazy" alt=""
+              /></picture>
+            </figure>
+            <figure class="slide">
+              <picture
+                ><img src="./images/slider/taxation.jpg" loading="lazy" alt=""
               /></picture>
             </figure>
           </div>
+
           <div class="arrow left icon">
-            <i class="fa-solid fa-chevron-left"></i>
+            <i class="fa-solid fa-chevron-left prev"></i>
           </div>
           <div class="arrow right icon">
-            <i class="fa-solid fa-chevron-right"></i>
+            <i class="fa-solid fa-chevron-right next"></i>
           </div>
         </article>
 
