fixing loose ends on form submission

--- a/src/template.html
+++ b/src/template.html
@@ -315,7 +315,7 @@
         </p>
       </article>
       <h6 class="messageHeadline">Send us a message</h6>
-      <form id="message" enctype="multipart/form-data">
+      <form id="message" enctype="multipart/form-data" method="POST">
         <input type="text" placeholder="Your Name" name="name" />
         <input type="email" placeholder="Your Email" name="email" />
         <input type="tel" placeholder="Your Whatsapp Number" name="mobile" />
