--- a/src/template.html
+++ b/src/template.html
@@ -119,7 +119,7 @@
 
             <figure class="slide">
               <picture
-                ><img src="./images/slider/payroll" loading="lazy" alt=""
+                ><img src="./images/slider/payroll.jpg" loading="lazy" alt=""
               /></picture>
             </figure>
             <figure class="slide">
