fixed slider issue

--- a/src/template.html
+++ b/src/template.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="./images/logo.png" alt="" />
+        <img src="./../public/images/logo.png" alt="" />
       </div>
       <nav class="nav">
         <div class="nav__wrapper hidden">
@@ -45,21 +45,24 @@
             <picture>
               <source
                 media="(min-width: 1400px)"
-                srcset="./images/site/laptop-with-dashboard-800.jpg"
+                srcset="./../public/images/laptop-with-dashboard-800.jpg"
               />
               <source
                 media="(min-width: 1200px)"
-                srcset="./images/site/laptop-with-dashboard-800.jpg"
+                srcset="./../public/images/laptop-with-dashboard-800.jpg"
               />
               <source
                 media="(min-width: 800px)"
-                srcset="./images/site/laptop-with-dashboard-800.jpg"
+                srcset="./../public/images/laptop-with-dashboard-800.jpg"
               />
               <source
                 media="(min-width: 600px)"
-                srcset="./images/site/laptop-with-dashboard-800.jpg"
+                srcset="./../public/images/laptop-with-dashboard-800.jpg"
               />
-              <img src="./images/site/laptop-with-dashboard-800.jpg" alt="" />
+              <img
+                src="./../public/images/laptop-with-dashboard-800.jpg"
+                alt=""
+              />
             </picture>
           </figure>
 
@@ -80,7 +83,7 @@
       <section class="about-us">
         <figure class="about-us__image">
           <picture>
-            <img src="./images/people-at-work.jpg" alt="" />
+            <img src="./../public/images/people-at-work.jpg" alt="" />
           </picture>
         </figure>
         <div class="about-us__content">
@@ -106,34 +109,40 @@
             <figure class="slide">
               <picture
                 ><img
-                  src="./images/slider/accounting.jpg"
+                  src="./../public/images/accounting.jpg"
                   loading="lazy"
                   alt=""
               /></picture>
             </figure>
             <figure class="slide">
               <picture
-                ><img src="./images/slider/gst.jpg" loading="lazy" alt=""
+                ><img src="./../public/images/gst.jpg" loading="lazy" alt=""
               /></picture>
             </figure>
 
             <figure class="slide">
               <picture
-                ><img src="./images/slider/payroll.jpg" loading="lazy" alt=""
+                ><img
+                  src="./../public/images/payroll.jpg"
+                  loading="lazy"
+                  alt=""
               /></picture>
             </figure>
             <figure class="slide">
               <picture
-                ><img src="./images/slider/taxation.jpg" loading="lazy" alt=""
+                ><img
+                  src="./../public/images/taxation.jpg"
+                  loading="lazy"
+                  alt=""
               /></picture>
             </figure>
           </div>
 
-          <div class="arrow left icon">
-            <i class="fa-solid fa-chevron-left prev"></i>
+          <div class="arrow left icon prev">
+            <i class="fa-solid fa-chevron-left"></i>
           </div>
-          <div class="arrow right icon">
-            <i class="fa-solid fa-chevron-right next"></i>
+          <div class="arrow right icon next">
+            <i class="fa-solid fa-chevron-right"></i>
           </div>
         </article>
 
@@ -152,7 +161,7 @@
           <div class="service">
             <h5>Bookkeeping Services</h5>
             <span class="icon">
-              <img src="./images/bookkeeping.png" alt="" />
+              <img src="./../public/images/bookkeeping.png" alt="" />
             </span>
             <p>
               Ewaan Financia has an impressive record of providing bookkeeping
@@ -163,7 +172,7 @@
           <div class="service">
             <h5>Accounting</h5>
             <span class="icon">
-              <img src="./images/accounting.png" alt="" />
+              <img src="./../public/images/accounting.png" alt="" />
             </span>
             <p>
               From invoice receipt, uploading and processing to difference
@@ -174,7 +183,7 @@
           <div class="service">
             <h5>GST</h5>
             <span class="icon">
-              <img src="./images/accounting.png" alt="" />
+              <img src="./../public/images/accounting.png" alt="" />
             </span>
             <p>
               Our customized accounts receivable services can help boost your
@@ -184,7 +193,7 @@
           <div class="service">
             <h5>Financial Reporting</h5>
             <span class="icon">
-              <img src="./images/report.png" alt="" />
+              <img src="./../public/images/report.png" alt="" />
             </span>
             <p>
               Our financial reporting services are designed to suit your
@@ -195,7 +204,7 @@
           <div class="service">
             <h5>Payroll Processing</h5>
             <span class="icon">
-              <img src="./images/payroll.png" alt="" />
+              <img src="./../public/images/payroll.png" alt="" />
             </span>
             <p>
               We at Ewaan Financial offer effortless, friendly and
@@ -205,7 +214,7 @@
           <div class="service">
             <h5>Tax Preparation</h5>
             <span class="icon">
-              <img src="./images/tax.png" alt="" />
+              <img src="./../public/images/tax.png" alt="" />
             </span>
             <p>
               With Ewaan Financial’s tax preparation services, your small
