finalised the button and the form validation

--- a/src/template.html
+++ b/src/template.html
@@ -75,7 +75,9 @@
             and compliant, enable quick decision making, seize opportunities and
             fasten growth.
           </p>
-          <a href="#services"><button>Our Services</button></a>
+          <a href="#services"
+            ><button><span>Our Services</span></button></a
+          >
         </article>
       </section>
       <hr id="about-us" />
@@ -342,7 +344,7 @@
             rows="10"
             required
           ></textarea>
-          <button type="submit">Submit</button>
+          <button type="submit"><span>Submit</span></button>
         </form>
       </section>
 
