--- a/src/template.html
+++ b/src/template.html
@@ -20,9 +20,11 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img src="./../public/images/logo.png" alt="" />
-      </div>
+      <a href="/">
+        <div class="logo">
+          <img src="./../public/images/logo.png" alt="" />
+        </div>
+      </a>
       <nav class="nav">
         <div class="nav__wrapper hidden">
           <ul class="nav__list">
@@ -110,32 +112,21 @@
           <div class="slides">
             <figure class="slide">
               <picture
-                ><img
-                  src="./../public/images/accounting.jpg"
-                  loading="lazy"
-                  alt=""
+                ><img src="./../public/images/accounting.jpg" alt=""
               /></picture>
             </figure>
             <figure class="slide">
-              <picture
-                ><img src="./../public/images/gst.jpg" loading="lazy" alt=""
-              /></picture>
+              <picture><img src="./../public/images/gst.jpg" alt="" /></picture>
             </figure>
 
             <figure class="slide">
               <picture
-                ><img
-                  src="./../public/images/payroll.jpg"
-                  loading="lazy"
-                  alt=""
+                ><img src="./../public/images/payroll.jpg" alt=""
               /></picture>
             </figure>
             <figure class="slide">
               <picture
-                ><img
-                  src="./../public/images/taxation.jpg"
-                  loading="lazy"
-                  alt=""
+                ><img src="./../public/images/taxation.jpg" alt=""
               /></picture>
             </figure>
           </div>
